[package]
name = "esp-hal-dhcp"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
edge-dhcp = { version = "0.2.0", default-features = false }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = ["medium-ethernet", "proto-ipv4", "udp"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
heapless = { version = "0.8.0", default-features = false }
log = "0.4.22"
