[package]
name = "esp-hal-dhcp-server"
version = "0.2.7"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A simple DHCP server for embassy-net (main target is esp-hal)"
repository = "https://github.com/filipton/esp-hal-dhcp-server"

[lib]

[dependencies]
edge-dhcp = { version = "0.6.0", default-features = false }
embassy-futures = "0.1.2"
embassy-net = { version = "0.7.1", features = ["medium-ethernet", "proto-ipv4", "udp"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.27", optional = true }

[features]
default = ["log"]
log = ["dep:log"]
