[package]
name = "esp-hal-dhcp-example"
version = "0.1.0"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.1", features = [ "esp32s3" ] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
log = { version = "0.4.27" }
#esp-wifi = { version = "0.7.1", features = ["async", "dump-packets", "embassy-net", "esp32s3", "phy-enable-usb", "utils", "wifi", "wifi-default"] }
esp-wifi = { version = "0.12.0", features = ["esp32s3", "utils", "wifi"] }
heapless = { version = "0.8.0", default-features = false }
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-16384"] }
embassy-net = { version = "0.6.0", features = ["tcp", "udp", "medium-ethernet", "dhcpv4"] }
static_cell = "2.1.0"
embassy-time = "0.4.0"
esp-hal-dhcp-server = { path = "../", default-features = false, features = ["log"] }
esp-alloc = "0.6.0"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
dotenvy = "0.15.7"
